--- a/src/app/components/shell/footer/footer.scss
+++ b/src/app/components/shell/footer/footer.scss
@@ -55,6 +55,10 @@ $lower-footer: #3b3b3b;
 
             a {
                 text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
 
             &.col1 {
@@ -99,6 +103,11 @@ $lower-footer: #3b3b3b;
         }
     }
 
+    .copyrights {
+        display: grid;
+        grid-gap: 1rem;
+    }
+
     .bottom {
         @include body-font(1.2rem);
 
@@ -126,7 +135,7 @@ $lower-footer: #3b3b3b;
             display: grid;
             grid-auto-flow: column;
             grid-gap: 1rem;
-            justify-content: center;
+            justify-content: left;
         }
     }
 
