--- a/src/app/pages/institutional-partner-program/sections/promoting/promoting.scss
+++ b/src/app/pages/institutional-partner-program/sections/promoting/promoting.scss
@@ -39,11 +39,16 @@
             .wide-card-entry {
                 align-items: center;
                 display: grid;
-                grid-template-columns: 8rem auto;
+                grid-column-gap: 3rem;
+                grid-template-columns: 4rem auto;
                 padding: 3rem 0;
 
                 &:not(:last-child) {
                     border-bottom: thin solid ui-color(form-border);
+                }
+
+                img {
+                    width: 4rem;
                 }
             }
         }
