--- a/src/app/pages/institutional-partner-program/institutional-partner-program.scss
+++ b/src/app/pages/institutional-partner-program/institutional-partner-program.scss
@@ -41,4 +41,48 @@ $near-white: #f8f8f8;
         color: text-color(white);
     }
 
+    .sticky-footer {
+        background-color: $near-white;
+        max-height: none;
+
+        @include width-up-to($phone-max) {
+            padding: 3.5rem;
+        }
+
+        @include wider-than($phone-max) {
+            padding: 5rem;
+        }
+
+        .button-group {
+            @extend %content;
+            display: grid;
+            justify-content: center;
+
+            @include wider-than($phone-max) {
+                grid-template: 'desc btn';
+                justify-content: space-between;
+
+                .btn {
+                    grid-area: btn;
+                }
+
+                .description {
+                    grid-area: desc;
+                }
+            }
+
+            .btn.medium {
+                @extend %button;
+                @extend %primary;
+
+                height: 5rem;
+                min-width: 17rem;
+            }
+
+            .description {
+                @include set-font(body-large);
+            }
+        }
+    }
+
 }
