--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -16,15 +16,14 @@ $dot-4: rgb(148, 221, 228);
 $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
 .openstax-tutor-footer {
-    background-color: $sea-bottom;
-    color: ui-color(white);
+    > .top,
+    > .bottom {
+        background-color: $sea-bottom;
+        color: ui-color(white);
 
-    .hero-quote {
-        color: inherit;
-    }
-
-    .social > .btn {
-        background-color: $sea-water;
+        .social > .btn {
+            background-color: $sea-water;
+        }
     }
 }
 
