Fix sign-up field font

--- a/src/app/pages/institutional-partnership/sections/sign-up/sign-up.scss
+++ b/src/app/pages/institutional-partnership/sections/sign-up/sign-up.scss
@@ -25,11 +25,9 @@
         width: 100%;
 
         input {
-            padding: 0 $normal-margin;
-        }
-
-        ::placeholder {
             @include set-font(body-regular);
+
+            text-indent: $normal-margin;
         }
     }
 
