Refactor errata form

--- a/src/app/pages/errata-form/errata-form.html
+++ b/src/app/pages/errata-form/errata-form.html
@@ -1,1 +1,6 @@
-<h1>Hi, this is errata form!</h1>
+<template args="model">
+    <div class="hero padded">
+        <h1>Suggest a correction for {model.title}</h1>
+    </div>
+    <div class="form-container text-content" skip="true"></div>
+</template>
