Move Partners to their own tab on Details page
Already had the tab created, just needed to enable it, rename it, and move it.

--- a/src/app/pages/details/details.html
+++ b/src/app/pages/details/details.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
         <div class="content">
             <div class="phone-view" skip="true"></div>
-            <div class="bigger-view hide-tab">
+            <div class="bigger-view">
                 <div class="tab-controller" skip="true"></div>
                 <div class="tab-content" skip="true"></div>
             </div>
