Include full TOC on book detail pages

--- a/src/app/pages/details/contents/content-item.html
+++ b/src/app/pages/details/contents/content-item.html
@@ -2,5 +2,5 @@
     <if condition="model.number">
         {model.number}.{' '}
     </if>
-    {model.title}
+    <a href="{`${model.webviewLink}:${model.shortId}`}">{model.title}</a>
 </template>
