--- a/src/app/pages/institutional-partnership/sections/sign-up/sign-up.html
+++ b/src/app/pages/institutional-partnership/sections/sign-up/sign-up.html
@@ -1,10 +1,8 @@
 <template args="model">
     <div class="content">
+        <span class="envelope-icon far fa-envelope-open"></span>
         <h1>{model.heading}</h1>
-        <form action="{model.submitUrl}">
-            <input placeholder="{model.formPrompt}">
-            <button type="submit" class="primary">{model.buttonText}</button>
-        </form>
         <div class="contact" data-html="contactHtml"></div>
+        <a class="btn primary" href="{model.submitUrl}">{model.buttonText}</a>
     </div>
 </template>
