Add Rice logo to footer
By the social icons.
Also removed the font-enlarging on the details page tabs

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -48,6 +48,9 @@
                 <a class="btn btn-social instagram" href="https://www.instagram.com/openstax/" title="instagram">
                     <span class="fab fa-instagram"></span>
                 </a>
+                <a class="rice-logo" href="http://www.rice.edu">
+                    <img src="/images/rice-white-text.png" alt="Rice University logo">
+                </a>
             </div>
         </div>
     </div>
