--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -151,6 +151,7 @@
             font-weight: normal;
 
             @include wider-than($tablet-max) {
+                font-size: 133%;
                 padding-bottom: $normal-margin;
             }
         }
