--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -210,15 +210,21 @@ $button-breakpoint: 100em * $scale-factor;
      }
 
     .student {
-        background-image: url('/images/home/education/student.png');
-        background-position: center bottom;
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-        bottom: -1rem;
-        height: 105%;
-        right: calc(-12rem + 12%);
-        width: calc(15rem + 30%);
-        z-index: 2;
+        @include width-up-to($phone-max) {
+            display: none;
+        }
+
+        @include wider-than($phone-max) {
+            background-image: url('/images/home/education/student.png');
+            background-position: center bottom;
+            background-repeat: no-repeat;
+            background-size: 100% auto;
+            bottom: -1rem;
+            height: 105%;
+            right: calc(-12rem + 12%);
+            width: calc(15rem + 30%);
+            z-index: 2;
+        }
 
         @include wider-than($button-breakpoint) {
             background-position: right bottom;
