Add loop attribute to video tag on Tutor page

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -60,7 +60,7 @@
                                  <else>
                                      <video class="{model.whatStudentsGet.transitioning}"
                                      src="{model.whatStudentsGet.currentImage.url}"
-                                     controls preload="metadata">
+                                     controls preload="metadata" loop>
                                      </video>
                                  </if>
                              </div>
