Ensure that images have alt tags

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -82,7 +82,7 @@
             <div if="model.cheggLink" class="option">
                 <a href="{model.cheggLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                <img class="logo-img" src="/images/icons/Chegglogo.svg">
+                <img class="logo-img" src="/images/icons/Chegglogo.svg" alt="">
                 <span class="text">
                     {model.cheggLinkText}
                 </span>
