--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -436,8 +436,8 @@
         </form>
     <else>
         <div class="hero">
-            <div class = "background-overlay"></div>
-            <div class="background-image"></div>
+            <div class = "background-overlay" role="presentation"></div>
+            <div class="background-image" role="presentation"></div>
             <div class="text-content">
                 <h1>{model.headline}</h1>
                 <p>{model.subhead}</p>
