--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -3,7 +3,7 @@
     <div class="sticky-footer-region" skip="true"></div>
     <if condition="model.frontier">
         <section id="new-frontier">
-            <div class="background-imagery">
+            <div class="background-imagery" role="img" aria-label="hiker looking over a valley">
                 <div class="top-image"></div>
                 <div class="middle-image"></div>
                 <div class="bottom-image"></div>
@@ -108,8 +108,8 @@
                     <div class="box">
                         <h2>{model.comingSoon.headline}</h2>
                         <div class="future-text" data-html="comingSoon.description" skip="true"></div>
-                        <img class="stamp" src="/images/openstax-tutor/icon-megaphone.svg">
-                        <img class="bottom-edge" src="/images/openstax-tutor/cs-background.svg">
+                        <div class="stamp" role="presentation"></div>
+                        <div class="bottom-edge" role="presentation"></div>
                         <div class="gradient-strip"></div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 $1 helps us keep the lights on.
             </div>
             <div class="boxed small-screen">
-                <img src="/images/openstax-tutor/ten-dollars-mobile@2x.png">
+                <img src="/images/openstax-tutor/ten-dollars-mobile@2x.png" alt="breakdown of 10 dollars">
                 <div class="box">
                     <div class="flexrow">
                         <div class="dot dot-1"></div>
@@ -160,7 +160,7 @@
             </div>
         </section>
         <div class="divider">
-            <img src="/images/openstax-tutor/faq-top-background.svg">
+            <img src="/images/openstax-tutor/faq-top-background.svg" alt="boat sailing past icebergs">
         </div>
         <section id="faq">
             <div class="boxed">
