--- a/src/app/pages/research/research.html
+++ b/src/app/pages/research/research.html
@@ -6,7 +6,7 @@
                 <div>{model.missionBody}</div>
             </div>
         </div>
-        <div class="images">
+        <div class="images" role="presentation">
             <div class="globe-clipping">
                 <img src="/images/research/hero-research-earth@1x.png" alt="">
             </div>
