--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="top">
         <div class="boxed">
-            <div role="heading">{model.supporters}</div>
+            <div role="heading" aria-level="2">{model.supporters}</div>
             <div class="mission">
                 It's our mission to give every student the tools they need to
                 be successful in the classroom. Help our cause by
@@ -36,17 +36,17 @@
             </div>
 
             <div class="social" role="directory">
-                <a class="btn btn-social facebook" href="{model.facebookLink}" title="facebook">
-                    <span class="fab fa-facebook-f"></span>
+                <a class="btn btn-social facebook" href="{model.facebookLink}" title="Facebook">
+                    <i class="fab fa-facebook-f" title="Facebook"></i>
                 </a>
-                <a class="btn btn-social twitter" href="{model.twitterLink}" title="twitter">
-                    <span class="fab fa-twitter"></span>
+                <a class="btn btn-social twitter" href="{model.twitterLink}" title="Twitter">
+                    <i class="fab fa-twitter" title="Twitter"></i>
                 </a>
-                <a class="btn btn-social linkedin" href="{model.linkedinLink}" title="linkedin">
-                    <span class="fab fa-linkedin-in"></span>
+                <a class="btn btn-social linkedin" href="{model.linkedinLink}" title="LinkedIn">
+                    <i class="fab fa-linkedin-in" title="LinkedIn"></i>
                 </a>
-                <a class="btn btn-social instagram" href="https://www.instagram.com/openstax/" title="instagram">
-                    <span class="fab fa-instagram"></span>
+                <a class="btn btn-social instagram" href="https://www.instagram.com/openstax/" title="Instagram">
+                    <i class="fab fa-instagram" title="Instagram"></i>
                 </a>
                 <a class="rice-logo" href="http://www.rice.edu">
                     <img src="/images/rice-white-text.png" alt="Rice University logo">
