--- a/src/app/pages/blog/article/formatted-as/synopsis.html
+++ b/src/app/pages/blog/article/formatted-as/synopsis.html
@@ -1,5 +1,8 @@
 <template args="model">
-    <a class="img" href="/blog/{model.articleSlug}" style="{backgroundImage: `url(${model.coverUrl})`}"></a>
+    <a class="img" href="/blog/{model.articleSlug}"
+        style="{backgroundImage: `url(${model.coverUrl})`}"
+        role="img" aria-label="{model.coverAltText}"
+    ></a>
     <div class="content">
         <article class="excerpt">
             <h2><a href="/blog/{model.articleSlug}">{model.title}</a></h2>
