--- a/src/app/pages/home/buckets/bucket/bucket.html
+++ b/src/app/pages/home/buckets/bucket/bucket.html
@@ -1,5 +1,8 @@
 <template args="model">
-    <div if="model.hasImage" class="image"></div>
+    <div if="model.hasImage" class="image"
+        role="img" aria-label="{model.image.alt_text || 'need alt text'}"
+        style="background-image: url('{model.image.image}')"
+    ></div>
     <div class="quote">
         <div>
             <span class="title">{model.heading}</span>
