--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -2,11 +2,8 @@
     <div class="container">
         <div class="square-1"></div>
         <div class="square-2"></div>
-
         <div class="quote" data-html="main.content" skip="true"></div>
-
-        <div class="student"></div>
-
+        <div class="student" role="img" aria-label="student holding history book"></div>
         <div class="links">
             <ul>
                 <li>
