--- a/src/app/pages/technology/new-frontier/new-frontier.html
+++ b/src/app/pages/technology/new-frontier/new-frontier.html
@@ -14,5 +14,5 @@
             </div>
         </div>
     </div>
-    <img class="border-image" src="/images/technology/technology-bearscape.svg">
+    <div class="border-image"></div>
 </template>
